# ghostminer

./: CMakeLists.txt  README.md
include/: hash.h  mainwindow.h  miner.h
src/: hash.c  main.cpp  miner.c
